@@ -1,5 +1,6 @@
 0.04
  - Add publication date use case.
+ - Improve clean_publication_date() code.
 
 0.03 2023-06-09T20:14:12+02:00
  - Add edition number use case.
